--- a/app1/view/app1.htm
+++ b/app1/view/app1.htm
@@ -48,7 +48,7 @@
       <div class="modal-body">
         <p>This demo application is assembled using Trillo builder. Trillo follows modular approach - build components and stitch them together3 as an application. The components are metadata driven and thus allow customization.
         </p>
-        <p>The componentized approach of Trillo2 makes development of an enterprise class UI efficient, flexible and modular. Persons with different roles can use its visual or programming environment to contribute to the end product.
+        <p>The componentized approach of Trillo2 makes development of an enterprise class UI efficient, flexible and modular. Persons with different role2s can use its visual or programming environment to contribute to the end product.
         </p>
         <p class="lead">Trillo transparently uses Git to enable collaboration among team members.
         </p>
