--- a/app1/view/app1.htm
+++ b/app1/view/app1.htm
@@ -50,7 +50,7 @@
         </p>
         <p>The componentized approach of Trillo2 makes development of an enterprise class UI efficient, flexible and modular. Persons with different role2s can use its visual or programming environment to contribute to the end product.
         </p>
-        <p class="lead">Trillo transparently uses Git to enable collaboration among team members.
+        <p class="lead">Trillo transparently1 uses Git to enable collaboration among team members.
         </p>
       </div>
       <div class="modal-footer">
